fixed info spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -208,10 +208,6 @@ dt:not(:first-child) {
     margin-top: 2em;
 }
 
-.info {
-    margin-top: 1em;
-}
-
 .error {
     background: red;
     color: white;
